--- a/public/views/admins/show.html
+++ b/public/views/admins/show.html
@@ -4,7 +4,7 @@
         <div class="page-header">
             <div class="row" style="margin-bottom: 20px;" align="center">
                 <a class="back-btn" ng-click="goBack()"><i class="fa fa-chevron-circle-left fa-4x"> </i></a>
-                <h1>Faculty Detail</h1>
+                <h1>Admin Detail</h1>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" align="right">
@@ -12,7 +12,7 @@
                         <h4><small>Name:</small></h4>
                     </div>
                     <div class="row detail-attribute">
-                        <h4><small>Faculty ID:</small></h4>
+                        <h4><small>Admin ID:</small></h4>
                     </div>
                     <div class="row detail-attribute">
                         <h4><small>Department:</small></h4>
@@ -26,19 +26,19 @@
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                     <div class="row detail-attribute">
-                        <h4><small>[[ faculty.f_name + ' ' + faculty.l_name ]]</small></h4>
+                        <h4><small>[[ admin.f_name + ' ' + admin.l_name ]]</small></h4>
                     </div>
                     <div class="row detail-attribute">
-                        <h4><small>[[ faculty.faculty_id ]]</small></h4>
+                        <h4><small>[[ admin.admin_id ]]</small></h4>
                     </div>
                     <div class="row detail-attribute">
-                        <h4><small>[[ faculty.department ]]</small></h4>
+                        <h4><small>[[ admin.department ]]</small></h4>
                     </div>
                     <div class="row detail-attribute">
-                        <h4><small>[[ faculty.major ]]</small></h4>
+                        <h4><small>[[ admin.major ]]</small></h4>
                     </div>
                     <div class="row detail-attribute">
-                        <h4><small>[[ faculty.phone ]]</small></h4>
+                        <h4><small>[[ admin.phone ]]</small></h4>
                     </div>
                 </div>
             </div>
