--- a/public/views/admins/snippet.html
+++ b/public/views/admins/snippet.html
@@ -3,8 +3,8 @@
         <img src="http://placehold.it/200X200" alt="placeholder" class="img img-responsive">
     </div>
     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" align="center">
-        <h2>[[ student.f_name + ' ' + student.l_name ]]</h2>
-        <h2><small>[[ student.student_id ]]</small></h2>
-        <h2><strong>[[ student.cgpa ]]</strong></h2>
+        <h2>[[ admin.f_name + ' ' + admin.l_name ]]</h2>
+        <h2><small>[[ admin.admin_id ]]</small></h2>
+        <h2><strong>[[ admin.cgpa ]]</strong></h2>
     </div>
 </div>
