--- a/public/views/students/index.html
+++ b/public/views/students/index.html
@@ -5,8 +5,12 @@
             <div class="row" style="margin-bottom: 20px;" align="center">
                 <a class="back-btn" ng-click="goBack()"><i class="fa fa-chevron-circle-left fa-4x"> </i></a>
                 <h1>Students List</h1>
+                <a class="add-btn" ui-sref="newStudent"><i class="fa fa-plus-circle fa-4x"> </i></a>
             </div>
             <student-snippet student="student" select="select" ng-repeat="(key, student) in students"></student-snippet>
+            <div class="row">
+                <button type="button" ng-hide="loaded === true" ng-click="loadMore('student')" class="btn btn-large btn-block btn-info">Load More</button>
+            </div>
         </div>
     </div>
 </div>
