--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -172,6 +172,13 @@ a:hover {
     float: left;
 }
 
+.add-btn {
+    margin: 35px 0px 0px 5px;
+    cursor: pointer;
+    display: inline-block;
+    float: right;
+}
+
 .course-small {
     background-color: #dedede;
     padding: 12px 15px;
@@ -355,6 +362,22 @@ a:hover {
     border: 3px solid #fff;
 }
 
+.flash {
+    position: fixed;
+    top: 20%;
+    width: 60%;
+    left: 20%;
+    z-index: 9999;
+    text-align: center;
+    opacity: 0.6;
+}
+
+.error-p {
+    padding: 2px;
+    margin-left: 10px;
+    color: #fff;
+}
+
 @media only screen and (max-width : 320px) {
     .container {
         width: 95%;
@@ -511,6 +534,9 @@ a:hover {
         padding: 5px 0px;
     }
     .back-btn {
+        margin: 15px 0px -12px 5px;
+    }
+    .add-btn {
         margin: 15px 0px -12px 5px;
     }
 }
