--- a/public/views/admins/index.html
+++ b/public/views/admins/index.html
@@ -4,12 +4,11 @@
         <div class="page-header">
             <div class="row" style="margin-bottom: 20px;" align="center">
                 <a class="back-btn" ng-click="goBack()"><i class="fa fa-chevron-circle-left fa-4x"> </i></a>
-                <h1>Faculties List</h1>
-                <a class="add-btn" ui-sref="newFaculty"><i class="fa fa-plus-circle fa-4x"> </i></a>
+                <h1>Admins List</h1>
             </div>
-            <faculty-snippet faculty="faculty" select="select" ng-repeat="(key, faculty) in faculties"></faculty-snippet>
+            <admin-snippet admin="admin" select="select" ng-repeat="(key, admin) in admins"></admin-snippet>
             <div class="row">
-                <button type="button" ng-hide="loaded === true" ng-click="loadMore('faculty')" class="btn btn-large btn-block btn-info">Load More</button>
+                <button type="button" ng-hide="loaded === true" ng-click="loadMore('admin')" class="btn btn-large btn-block btn-info">Load More</button>
             </div>
         </div>
     </div>
