--- a/public/views/rooms/index.html
+++ b/public/views/rooms/index.html
@@ -5,8 +5,8 @@
             <div class="row" style="margin-bottom: 20px;" align="center">
                 <a class="back-btn" ng-click="goBack()"><i class="fa fa-chevron-circle-left fa-4x"> </i></a>
                 <h1>Class Rooms</h1>
+                <a class="add-btn" ui-sref="newRoom"><i class="fa fa-plus-circle fa-4x"> </i></a>
             </div>
-            <errors errors="errors" messages="messages"></errors>
             <room-snippet room="room" select="select" locate="locate" remove="remove" add="add" courses="courses" exclude="exclude" ng-repeat="(key, room) in rooms"></room-snippet>
             <div class="row">
                 <button type="button" ng-show="loaded === false" ng-click="loadMore()" class="btn btn-large btn-block btn-info">Load More</button>
